[package]
name = "oxid_sql"
version = "0.1.0"
authors = ["Michael Zismeister <m.zinsmeister@live.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
zerocopy = "0.6.1"
byteorder = "1.4.3"
cli-table = "0.4"
log = "0.4"
env_logger = "0.8.4"

[dependencies.nom]
version = "^6"
features = ["regexp"]
