[package]
name = "OxidSQL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
petgraph = "0.6.3"
itertools = "0.10.5"

[dev-dependencies]
tempfile = "3"
mockall = "0.11.3"
rand = "0.8.5"
