[package]
name = "oxid_sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
petgraph = "0.6.3"
itertools = "0.10.5"
rand = "0.8.5"
libc = "0.2.139"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
nom = "^7"
rustyline = "11.0.0"
zerocopy = { version = "0.7.32", features = ["alloc", "derive", "simd"] }
ahash = "0.8.3"
atomic = "0.5.3"
bitvec = "1.0.1"
aes = "0.8.2"
hex = "0.4.3"
sqlparser = "0.35.0"

[dev-dependencies]
tempfile = "3"
mockall = "0.11.3"

[features]
"allow-unsafe" = []
